# hayfind

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: commands.md  config.yaml
prompts/: codex-build-2026-02-24.md  codex-local-embeddings-ollama-2026-02-24.md  codex-migrate-google-genai-2026-02-24.md  codex-openai-embeddings-fallback-2026-02-24.md  codex-ops-repos-indexing-2026-02-24.md
src/hayfind/: __init__.py  cli.py  config.py  credentials.py  embeddings.py  indexer.py  models.py  search.py  service.py  store.py
src/hayfindd/: __init__.py  __main__.py
tests/: test_cli_hooks.py  test_config.py  test_embeddings.py  test_indexer_utils.py
